--- a/index.html
+++ b/index.html
@@ -13,5 +13,7 @@
 </head>
 <body>
 <p class="p1"><span class="s1">This is my app!<span class="Apple-converted-space">  </span>Login form</span></p>
+<strong>Warning!</strong> Represents a warning that needs attention. </br>
+<strong>Danger!</strong> Represents a dangerous negative action. </br>
 </body>
 </html>
